# zhuanli

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy-render.yml
app/: config.py  db.py  main.py  models.py  schemas.py
app/routes/: analytics.py  events.py  ingest.py  patents.py  projects.py  reports.py
app/services/: __init__.py  event_generator.py  ingest_scheduler.py
app/static/: index.html
docs/: MVP_JIRA_BACKLOG.md  PRD.md  REPOSITORY_STRUCTURE.md  TECH_SPEC.md
scripts/: migrate_to_repo.sh  smoke_test.sh
tests/: test_api.py
